<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">About me</string>
    <string name="b_info_text">More details..</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="change_info">Change info</string>
    <string name="exit">Exit</string>
    <string name="invitation">Hello, my name is</string>
    <string name="me_name">Name</string>
    <string name="man">Man</string>
    <string name="manOrWoman">Man or Woman?</string>
    <string name="surname">Surname</string>
    <string name="woman">Woman</string>
    <string name="birthday">Birthday</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="address">Address</string>
    <string name="full_address">Contacts</string>
    <string name="hobbes_interest">Interests, hobbies</string>
    <string name="main_info">Main information</string>
    <string name="work_and_study">Work and study</string>
    <string name="email">E-mail</string>
    <string name="phonenumber">Contact phonenumber</string>
    <string name="save">Save</string>
    <string name="social_pages">Social pages</string>
    <string name="what_is_name">What is your name?</string>
    <string name="what_is_surname">What is your surname?</string>
    <string name="loving_books">Loving books</string>
    <string name="loving_movies">Loving movies, serials</string>
    <string name="loving_music">Loving music</string>
    <string name="where_study">And where did you study?</string>
    <string name="where_work">Tell, where did you work or are working?</string>
    <string name="you_loving_hobbies">Your the best hobbies, interests</string>
    <string name="get_from_camera">Get from camera</string>
    <string name="load_from_storage">Load from storage..</string>
    <string name="chooser_title">What app to use</string>
    <string name="error_chooser_app">Do not install a FileManager</string>
    <string name="no_activity_result">Result of onActivityResult() is incorrect</string>
    <string name="can_not_load_data">Data loading is failed</string>
    <string name="can_not_save_data">Data saving is failed</string>
    <string name="cant_create_file_image">Failed to create an image file</string>
    <string name="do_not_pick_birthday">A birthday does not choose</string>
    <string name="year">year</string>
    <string name="years">years</string>
    <string name="years2">years</string>
    <string name="choose_a_birthday">Choose a birthday</string>
    <string name="age">Age</string>
    <string name="loving_hobbis">Hobbies and interests</string>
    <string name="was_born">was born %1$s</string>
    <string name="was_born2">was born %1$s</string>
    <string name="university">Educational establishments</string>
    <string name="work">Work</string>
    <string name="title_add_info">Detailed info</string>
    <string name="title_settings">Change info</string>
    <string name="crash_app">Crash app</string>
    <string name="personal_photo">Personal photo</string>
    <string name="no_suitable_app">No suitable application found</string>
    <string name="choose_source">Choose source</string>
    <string name="personal_photos">Personal photos</string>
    <string name="hello_amigo">Hello, amigo!</string>
    <string name="fileprovider_authority" translatable="false">iv.nakonechnyi.aboutme.fileprovider</string>
    <string name="welcome_message" translatable="false">%1$s %2$s, %3$d %4$s</string>
    <string name="explanation_for_perms_read_storage">An app needs permissions for reading an image from a storage.</string>
    <string name="explanation_for_perms_camera">An app needs permissions for reading and writing fotos from/to a storage.</string>

    <string-array name="dialog_items">
        <item>@string/load_from_storage</item>
        <item>@string/get_from_camera</item>
    </string-array>

</resources>