<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_add_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding16dp"
        android:orientation="vertical">

        <TextView
            style="@style/TextView_title_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address" />
        <TextView
            android:id="@+id/tw_address_info"
            style="@style/TextView_item_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            style="@style/TextView_title_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/phonenumber"/>
        <TextView
            android:id="@+id/tw_phonenumber_info"
            style="@style/TextView_item_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            style="@style/TextView_title_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/email"/>
        <TextView
            android:id="@+id/tw_email_info"
            style="@style/TextView_item_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            style="@style/TextView_title_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/work"/>
        <TextView
            android:id="@+id/tw_work_info"
            style="@style/TextView_item_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            style="@style/TextView_title_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/university"/>
        <TextView
            android:id="@+id/tw_study_info"
            style="@style/TextView_item_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            style="@style/TextView_title_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/loving_hobbis"/>
        <TextView
            android:id="@+id/tw_hobbies_info"
            style="@style/TextView_item_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            style="@style/TextView_title_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/loving_books"/>
        <TextView
            android:id="@+id/tw_loving_books_info"
            style="@style/TextView_item_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            style="@style/TextView_title_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/loving_movies"/>
        <TextView
            android:id="@+id/tw_loving_movies_info"
            style="@style/TextView_item_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            style="@style/TextView_title_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/loving_music"/>
        <TextView
            android:id="@+id/tw_loving_music_info"
            style="@style/TextView_item_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <include layout="@layout/part_social" />
    </LinearLayout>
</ScrollView>