<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_group2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/margin"
    android:layout_marginTop="@dimen/margin"
    android:layout_marginEnd="@dimen/margin"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tw_country"
        android:padding="@dimen/pad8"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/country"/>

    <EditText
        android:id="@+id/et_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/pad8"
        android:inputType="textPersonName"/>

    <TextView
        android:id="@+id/tw_city"
        android:padding="@dimen/pad8"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/city"/>

    <EditText
        android:id="@+id/et_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/pad8"
        android:inputType="textPersonName"/>

    <TextView
        android:id="@+id/tw_address"
        android:padding="@dimen/pad8"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/address"/>

    <EditText
        android:id="@+id/et_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/pad8"
        android:inputType="text"/>

    <TextView
        android:id="@+id/tw_phonenumber"
        android:padding="@dimen/pad8"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/phonenumber"/>

    <EditText
        android:id="@+id/et_phonenumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/pad8"
        android:inputType="phone"/>

    <TextView
        android:id="@+id/tw_email"
        android:padding="@dimen/pad8"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/email"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/pad8"
        android:inputType="textEmailAddress"/>
</LinearLayout>