<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_group1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/margin"
    android:layout_marginTop="@dimen/margin"
    android:layout_marginEnd="@dimen/margin"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tw_name"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:padding="@dimen/pad8"
        android:text="@string/me_name" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:padding="@dimen/pad8" />

    <TextView
        android:id="@+id/tw_surname"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:padding="@dimen/pad8"
        android:text="@string/surname" />

    <EditText
        android:id="@+id/et_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:padding="@dimen/pad8" />

    <TextView
        android:id="@+id/tw_sex"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:padding="@dimen/pad8"
        android:text="@string/manOrWoman" />

    <RadioGroup
        android:id="@+id/rg_sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/is_a_man"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/man" />

        <RadioButton
            android:id="@+id/is_a_woman"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/woman" />
    </RadioGroup>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tw_birthday_info"
            android:layout_width="match_parent"
            android:layout_height="@dimen/icon_size"
            android:layout_alignParentStart="true"
            android:padding="@dimen/pad8"
            android:text="@string/birthday"
            android:gravity="center_vertical"/>

        <TextView
            android:id="@+id/tw_birthday"
            android:layout_width="match_parent"
            android:layout_height="@dimen/icon_size"
            android:layout_marginStart="@dimen/margin"
            android:layout_alignEnd="@+id/tw_birthday_info"
            android:gravity="center_vertical"
            android:text=""
            android:textAlignment="center"
            android:padding="@dimen/pad8" />

        <ImageButton
            android:id="@+id/ib_date"
            android:background="@android:color/transparent"
            android:layout_width="@dimen/icon_size32dp"
            android:layout_height="@dimen/icon_size32dp"
            android:layout_marginStart="@dimen/margin"
            android:layout_alignParentEnd="true"
            android:layout_alignEnd="@id/tw_birthday"
            android:layout_gravity="end"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/date" />

    </RelativeLayout>


</LinearLayout>