<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_group4"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/margin"
    android:layout_marginTop="@dimen/margin"
    android:layout_marginEnd="@dimen/margin"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tw_hobbies"
        android:padding="@dimen/pad8"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/you_loving_hobbies"/>

    <EditText
        android:id="@+id/et_hobbies"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:padding="@dimen/pad8"
        android:inputType="textMultiLine"/>

    <TextView
        android:id="@+id/tw_loving_books"
        android:padding="@dimen/pad8"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/loving_books"/>

    <EditText
        android:id="@+id/et_loving_books"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:padding="@dimen/pad8"
        android:inputType="textMultiLine"/>

    <TextView
        android:id="@+id/tw_loving_movies"
        android:padding="@dimen/pad8"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/loving_movies"/>

    <EditText
        android:id="@+id/et_loving_movies"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:padding="@dimen/pad8"
        android:inputType="textMultiLine"/>

    <TextView
        android:id="@+id/tw_loving_music"
        android:padding="@dimen/pad8"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/loving_music"/>

    <EditText
        android:id="@+id/et_loving_music"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:padding="@dimen/pad8"
        android:inputType="textMultiLine"/>

</LinearLayout>